[package]
name = "bevy-jam-02"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.8.0", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"] }
bevy-inspector-egui = "0.12.1"
rand = "0.8.5"
bevy_kira_audio = "0.12.0"
bevy_asset_loader = "0.12.1"